# python_fastapi_dependency_injection_beanie_template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
misc/: mongo-init.js
src/: main.py
src/core/: application.py  authentication.py  constants.py  container.py  database.py  exceptions.py  logger.py  settings.py
src/models/domain/: todo_list.py
src/models/orm/: __init__.py  todo_list.py
src/models/schemas/: todo_list.py
src/repositories/: base.py  todo_list.py
src/routers/v1/: routers.py
src/routers/v1/endpoints/: todo_list.py
src/services/: base.py  todo_list.py
src/utilities/: misc.py
tests/: conftest.py  test_main.py  utility.py
tests/integration/: test_todo_list_router.py
tests/unit/test_repostiories/: test_todo_list_repository.py
tests/unit/test_schemas/: test_todo_list_schema.py
tests/unit/test_services/: test_todo_list_service.py
